CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/spectrum_plot_tools.py.in
  ${CMAKE_CURRENT_BINARY_DIR}/spectrum_plot_tools.py)

INSTALL(FILES
  ${CMAKE_CURRENT_BINARY_DIR}/spectrum_plot_tools.py
  DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  PERMISSIONS OWNER_READ    GROUP_READ    WORLD_READ
              OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)
