CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/spectrum_plot_tools.py.in
  ${CMAKE_CURRENT_BINARY_DIR}/spectrum_plot_tools.py)

INSTALL(FILES
  ${CMAKE_CURRENT_BINARY_DIR}/spectrum_plot_tools.py
  DESTINATION ${PyFrensie_INSTALL_DIR}
  PERMISSIONS OWNER_READ    GROUP_READ    WORLD_READ
              OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)
