CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/albedo.py.in
  ${CMAKE_CURRENT_BINARY_DIR}/albedo.py)

INSTALL(FILES
  ${CMAKE_CURRENT_BINARY_DIR}/albedo.py
  ${CMAKE_CURRENT_SOURCE_DIR}/geom.h5m
  ${CMAKE_CURRENT_SOURCE_DIR}/geom.trelis
  ${CMAKE_CURRENT_SOURCE_DIR}/mcnp.in
  ${CMAKE_CURRENT_SOURCE_DIR}/README.md
  DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/electron/albedo
  PERMISSIONS OWNER_READ    GROUP_READ    WORLD_READ)
